Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24190

Accessing INFORMATION_SCHEMA.INNODB_TABLESPACES_ENCRYPTION may break innodb_open_files logic

    XMLWordPrintable

Details

    Description

      If the function i_s_tablespaces_encryption_fill_table() was not able to report all content to the SQL layer, it would fail to decrement fil_system.freeze_space_list that it had incremented. This would prevent the not-frequently-used logic from working, potentially causing frequently used files to be closed and reopened whenever innodb_open_files is exceeded.

      This regression was caused by MDEV-23855, which removed the fil_system.LRU list and introduced the not-frequently-used logic for closing and opening InnoDB data files.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.